<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".Admin.AdminUpdateIdActivity">

    <ImageView
        android:id="@+id/imageAwal"
        android:layout_width="198dp"
        android:layout_height="166dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp"
        android:src="@drawable/group_8" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageAwal"
        android:layout_marginTop="80dp"
        android:background="@drawable/shape1"
        android:backgroundTint="@color/White">

        <TextView
            android:id="@+id/etOldId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="0dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/shape2"
            android:drawablePadding="40dp"
            android:hint="@string/txt_enter_old_id"
            android:padding="15dp"
            android:textColorHint="@color/Black"
            android:textSize="15dp" />

        <EditText
            android:id="@+id/etNewId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etOldId"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/shape2"
            android:drawablePadding="40dp"
            android:hint="@string/txt_enter_new_id"
            android:padding="15dp"
            android:textColorHint="@color/Black"
            android:textSize="15dp" />

        <Button
            android:id="@+id/btnUpdateId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/etNewId"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="37dp"
            android:layout_marginRight="50dp"
            android:backgroundTint="@color/primaryColor"
            android:fontFamily="@font/poppinsmedium"
            android:padding="12dp"
            android:text="Update id"
            android:textColor="@color/White" />

    </RelativeLayout>

    <TextView
        android:id="@+id/tvTittleUpdateIdItems"
        android:layout_width="341dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/poppinsmedium"
        android:text="@string/txt_update_ID_items"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textAlignment="center"
        android:layout_marginTop="20sp"
        android:textStyle="bold" />
</RelativeLayout>